@@ -1,10 +1,6 @@
 package random.gba.randomizer.shuffling;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 
 import fedata.gba.GBAFECharacterData.Affinity;
 import fedata.gba.GBAFEStatDto;
@@ -41,7 +37,15 @@ public class GBACrossGameData {
 	public int eyeY;
 	public int mouthX;
 	public int mouthY;
+	/**
+	 * If this is a non-null value, it means that the user wants the character to be fixed in that slot.
+	 * If multiple characters reference the same fixed slot, only the first one will actually happen.
+	 */
+	public Integer forcedSlot;
 
+	/**
+	 * Constructor used for generating the files initially. No need to maintain this.
+	 */
 	public GBACrossGameData(String name, String portraitPath, String description1, String description2, GBACrossGameDataBattlePalette battlePalette,
 			String paletteString, GBAFEClass characterClass, boolean promoted, int level, GBAFEStatDto bases, GBAFEStatDto growths,
 			int[] weaponRanks, int constitution, String affinity, byte[] facialFeatureCoordinates) {
@@ -314,12 +318,15 @@ public class GBACrossGameData {
 	}
 
 	
-	private static Map<GameType, List<GameType>> sourceGameMap = 
-			Map.of(
-					GameType.FE6, Arrays.asList(GameType.FE7, GameType.FE8), 
-					GameType.FE7, Arrays.asList(GameType.FE6, GameType.FE8), 
-					GameType.FE8, Arrays.asList(GameType.FE6, GameType.FE7)
-			); 
+	private static Map<GameType, List<GameType>> sourceGameMap = buildSourceGameMap();
+
+	private static Map<GameType, List<GameType>> buildSourceGameMap() {
+		Map<GameType, List<GameType>> map = new HashMap<>();
+		map.put(GameType.FE6, Arrays.asList(GameType.FE7, GameType.FE8));
+		map.put(GameType.FE7, Arrays.asList(GameType.FE6, GameType.FE8));
+		map.put(GameType.FE8, Arrays.asList(GameType.FE6, GameType.FE7));
+		return Collections.unmodifiableMap(map);
+	}
 	//@formatter:on
 
 	/**
@@ -340,7 +347,10 @@ public class GBACrossGameData {
 	 */
 	private static void addEntry(GameType sourceGame, GBAFEClass source, GBAFEClass to1, GBAFEClass to2) {
 		List<GameType> sourceGames = sourceGameMap.get(sourceGame);
-		classMap.put(source, Map.of(sourceGames.get(0), to1, sourceGames.get(1), to2));
+		Map<GameType, GBAFEClass> inner = new HashMap<>();
+		inner.put(sourceGames.get(0), to1);
+		inner.put(sourceGames.get(1), to2);
+		classMap.put(source, Collections.unmodifiableMap(inner));
 	}
 
 }
